<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DiabCalc</string>
    <string name="name">Name</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="fat">Fat</string>
    <string name="hour">Hour(s)</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="back">Back</string>
    <string name="delete" tools:ignore="MissingTranslation">Delete</string>
    <string name="textview">TextView</string>
    <string name="next">Next</string>
    <string name="grammars">Grammars</string>
    <string name="start">Start</string>
    <string name="search_food">Search Food</string>
    <string name="default_image_for_main_page">Default image for main page</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="favorite">favorite</string>
    <string name="text2">Text2</string>
    <string name="new_menu">New</string>
    <string name="sum">Sum</string>
    <string name="totalUnits">Total Units</string>
    <string name="totalCarbohydrates">Total Carbohydrates</string>
    <string name="totalFat">Total Fat</string>
    <string name="in">in</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="areYouSure">Are You Sure You Want To Delete This Food?</string>
    <string name="areYouSureMenu">Are You Sure You Want To Delete This Menu?</string>
    <string name="deleteConfirm">Food Deleted</string>
    <string name="error">Error</string>
    <string name="foodExists">Food Already Exists</string>
    <string name="foodAdded">Food Added</string>
    <string name="foodEdited">Food Edited</string>
    <string name="notEnoughInformation">Not Enough Information</string>
    <string name="menuName">Menu Name: </string>
    <string name="menuRemoved">Menu Removed From Favorites</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="menuAlreadyExists">Menu Name Already Exists</string>
    <string name="menuAdded">Menu Added To Favorites</string>
    <string name="description">Description</string>
    <string name="categoryAdd">This Category Doesn\'t Exist. Do you want to add it?</string>
    <string name="brandAdd">This Brand Doesn\'t Exist. Do you want to add it?</string>
    <string name="info_info">INFO,info</string>
    <string name="noDescription">No Description</string>
    <string name="apply">Apply</string>
    <string name="filter">Filters</string>
    <string name="category">Category</string>
    <string name="brand">Brand</string>
    <string name="reset">reset</string>
    <string name="inputNeeded">Input Needed</string>
    <string name="menus">Menus</string>
    <string name="perMeal">Per Meal</string>
    <string name="piece">Piece(s)</string>
    <string name="quantity">Quantity</string>
    <string name="mainMenu">Main Menu</string>

</resources>