<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


        <group>
                <item
                    android:id="@+id/start"
                    android:title="@string/start"
                    android:onClick="start"/>
                <item
                    android:id="@+id/add"
                    android:title="@string/add"
                    android:onClick="add"/>
                <item
                    android:id="@+id/delete"
                    android:title="@string/edit"
                    android:onClick="delete"/>
                <item
                    android:id="@+id/favorites"
                    android:title="@string/favorites"
                    android:onClick="favorites"/>
        </group>


</menu>