<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="#757575"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/category_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/category_menu"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:hint="@string/category"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintBottom_toTopOf="@+id/brand_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">

        <AutoCompleteTextView
            android:id="@+id/categoryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColorHint="#616161"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/brand_menu"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:hint="@string/brand"
        app:layout_constraintTop_toBottomOf="@+id/category_menu"
        app:layout_constraintBottom_toTopOf="@+id/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">

        <AutoCompleteTextView
            android:id="@+id/brandText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColorHint="#616161"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/description"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="#757575"
        app:layout_constraintTop_toBottomOf="@+id/brand_menu"
        app:layout_constraintBottom_toTopOf="@+id/carbohydrates"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/carbohydrates"
        android:hint="@string/carbohydrates"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="#757575"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintBottom_toTopOf="@+id/fat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <EditText
        android:id="@+id/fat"
        android:hint="@string/fat"
        android:layout_width="80dp"
        android:layout_height="56dp"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="#757575"
        app:layout_constraintTop_toBottomOf="@+id/carbohydrates"
        app:layout_constraintBottom_toTopOf="@+id/addFoodToDB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/hour" />

    <EditText
        android:id="@+id/hour"
        android:layout_width="80dp"
        android:layout_height="56dp"
        android:hint="@string/hour"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="#757575"
        app:layout_constraintTop_toBottomOf="@+id/carbohydrates"
        app:layout_constraintBottom_toTopOf="@+id/addFoodToDB"
        app:layout_constraintStart_toEndOf="@+id/fat"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/addFoodToDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/hour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>