<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer"
    tools:context=".MainPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainPage">

        <Button
            android:id="@+id/start"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@id/edit"
            app:layout_constraintEnd_toStartOf="@+id/add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/add"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@id/edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/start"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/edit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/start"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="375dp"
            android:layout_height="350dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/default_image_for_main_page"
            android:src="@drawable/photo_in_app_purple"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@drawable/photo_in_app_purple" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/main_menu" />



</androidx.drawerlayout.widget.DrawerLayout>
